# open-erp

./: .gitignore  LICENSE  README.md  check_edit.py  pyproject.toml  user-manual.md
.cursor/plans/: erp_specification_7bab5dad.plan.md
.github/workflows/: ci.yml
docs/: developer.md  mvp-done.md
docs/adr/: 0001-mvp-scope.md  0002-technology-stack.md
src/openerp/: bootstrap.py  cli.py  config.py  db.py
src/openerp/core/: audit.py  backup.py  context.py  decimal.py  import_export.py  metadata.py  migrations.py  naming.py  posting.py  registers.py  repository.py  schema.py  search.py  security.py
src/openerp/modules/trade/: __init__.py  demo.py  metadata.py  migrations.py  posting.py  reports.py
src/openerp/web/: app.py
src/openerp/web/templates/: base.html  error.html  index.html  login.html  search.html
src/openerp/web/templates/audit/: list.html
src/openerp/web/templates/catalogs/: form.html  import.html  list.html
src/openerp/web/templates/documents/: _macros.html  _rows.html  form.html  list.html  print_act.html  print_form.html  print_invoice.html  view.html
src/openerp/web/templates/operations/: list.html
src/openerp/web/templates/partials/: global_search.html  sidebar_panel.html
src/openerp/web/templates/reports/: generic.html  stock_balance.html
src/openerp/web/templates/settings/: closed_period.html
tests/: conftest.py  test_auth.py  test_dashboard.py  test_demo.py  test_documents_ui.py  test_import.py  test_posting.py  test_reports.py  test_reports_ui_data.py  test_search.py  test_trade_gaps.py
